# ROS-SAeD

./: .gitignore  Dockerfile  compose.yaml
modulo_LiDAR/: CMakeLists.txt
modulo_LiDAR/src/: ModuloGiroscopico.cpp  main.cpp
modulo_Radar/: CMakeLists.txt  package.xml
robot_hardware_drivers/: CMakeLists.txt  package.xml
src/modulo_radar/src/: BatalhaNava.cpp
src/package_radar/: CMakeLists.txt  package.xml
src/package_radar/src/: BatalhaNaval.cpp
ws/.devcontainer/: Dockerfile  devcontainer.json
ws/launch/: saed_ros_launch.xml
ws/src/map_package/: CMakeLists.txt  package.xml
ws/src/map_package/src/: CalcPoint.h  MapManager.hpp  MapServer.cpp
ws/src/modulo_mapeamento/: CMakeLists.txt  package.xml
ws/src/modulo_mapeamento/src/: MapConstructor.h  MapManager.h
ws/src/modulo_radar/: CMakeLists.txt  package.xml
ws/src/modulo_radar/msg/: AddPoint.srv  Radar.msg
ws/src/modulo_radar/src/: BatalhaNava.cpp  BatalhaNaval.cpp  CalculoDePonto.cpp  GeradorDePontos.cpp  Main.cpp  RadarSubscriber.cpp  batalhaNaval.cpp
ws/src/modulo_web/: package.xml  setup.cfg  setup.py
ws/src/modulo_web/modulo_web/: RadarPublisher.py  __main__.py
ws/src/path_calc_package/: CMakeLists.txt  package.xml
ws/src/path_calc_package/src/: PathCalc.cpp
ws/src/radar_package/: CMakeLists.txt  package.xml
ws/src/radar_package/src/: RadarSubscriber.cpp
ws/src/radar_publisher_test/: CMakeLists.txt  package.xml
ws/src/radar_publisher_test/src/: main.cpp
ws/src/saed_interfaces/: CMakeLists.txt  package.xml
ws/src/saed_interfaces/srv/: GetCellScale.srv  GetMapCell.srv  getMap.srv
