<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_hardware_drivers</name>
  <version>0.0.1</version>
  <description>Descrição do pacote</description>
  <maintainer email="arthurhenrrique1705@gmail.com">Arthur</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependências de build -->
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- Dependências de execução -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Dependências de build system -->
  <build_type>ament_cmake</build_type>

  <!-- Ferramentas de testes -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
</package>